@@ -28,6 +28,7 @@ import java.util.stream.Collectors;
 @RequiredArgsConstructor
 @Slf4j
 public class PatientService {
+
     private final UserAppointmentService userAppointmentService;
     private final UserService userService;
     private final PatientAppointmentMapper patientAppointmentMapper;
@@ -35,43 +36,44 @@ public class PatientService {
     private final PatientMapper patientMapper;
     private final PasswordEncoder passwordEncoder;
 
+  public List<PatientAppointmentDto> getAppointments() {
+    User user = userService.getCurrentUser();
+    log.info(String.valueOf(user.getId()));
+    return userAppointmentService.findUserAppointments(user).stream()
+        .map(
+            (appointment) -> {
+              PatientAppointmentDto patientAppointmentDto =
+                  patientAppointmentMapper.toDto(appointment);
+              patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
+              return patientAppointmentDto;
+            })
+        .collect(Collectors.toList());
+  }
 
-    public List<PatientAppointmentDto> getAppointments() {
-        User user = userService.getCurrentUser();
-        log.info(String.valueOf(user.getId()));
-        return userAppointmentService.findUserAppointments(user).stream()
-                .map(
-                        (appointment) -> {
-                            PatientAppointmentDto patientAppointmentDto =
-                                    patientAppointmentMapper.toDto(appointment);
-                            patientAppointmentDto.setDoctorId(appointment.getDoctor().getId());
-                            return patientAppointmentDto;
-                        })
-                .collect(Collectors.toList());
-    }
+  public List<PatientResponseDto> getAllPatients(Predicate predicate, Pageable pageable) {
+    return patientRepository.findAll(predicate, pageable).stream()
+        .map(patientMapper::mapPatientToPatientResponseDto)
+        .toList();
+  }
 
-    public List<PatientResponseDto> getAllPatients(
-            Predicate predicate, Pageable pageable
-    ) {
-        return patientRepository.findAll(predicate, pageable)
-                .stream()
-                .map(patientMapper::mapPatientToPatientResponseDto)
-                .toList();
-    }
+  public Patient getPatientById(Long patientId) {
+    return patientRepository
+        .findById(patientId)
+        .orElseThrow(
+            () -> new UsernameNotFoundException("Patient not found with id: " + patientId));
+  }
 
-    public PatientResponseDto getPatientById(Long patientId) {
-        var patient = patientRepository.findById(patientId)
-                .orElseThrow(() ->
-                        new UsernameNotFoundException("Patient not found with id: " + patientId));
-        return patientMapper.mapPatientToPatientResponseDto(patient);
-    }
+  public PatientResponseDto getPatientDtoById(Long patientId) {
+    Patient patient = getPatientById(patientId);
+    return patientMapper.mapPatientToPatientResponseDto(patient);
+  }
 
-    @Transactional
-    public void registerPatient(PatientDto patientDto) {
-        var patient = new Patient();
-        patient = patientMapper.mapPatientDtoToPatient(patientDto);
-        patientRepository.save(patient);
-    }
+  @Transactional
+  public void registerPatient(PatientDto patientDto) {
+    var patient = new Patient();
+    patient = patientMapper.mapPatientDtoToPatient(patientDto);
+    patientRepository.save(patient);
+  }
 
     @Transactional
     public PatientResponseDto updatePatient(Long patientId, PatientDto patientDto) {
@@ -112,6 +114,5 @@ public class PatientService {
         patient.setInsurancePolicyNumber(patientDto.getAdditionalInfoDto().getInsurancePolicyNumber());
 
     }
-
 
 }
